--- a/PTI/SPCK/GUI/AdminPage.ui
+++ b/PTI/SPCK/GUI/AdminPage.ui
@@ -40,9 +40,9 @@
     <property name="geometry">
      <rect>
       <x>820</x>
-      <y>460</y>
+      <y>410</y>
       <width>20</width>
-      <height>161</height>
+      <height>211</height>
      </rect>
     </property>
     <property name="orientation">
@@ -202,7 +202,7 @@ p, li { white-space: pre-wrap; }
     <property name="geometry">
      <rect>
       <x>830</x>
-      <y>450</y>
+      <y>400</y>
       <width>201</width>
       <height>20</height>
      </rect>
@@ -226,7 +226,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Release Version 1</string>
+     <string>Beta 4 Testing Only!</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
@@ -351,6 +351,24 @@ p, li { white-space: pre-wrap; }
      <enum>Qt::Vertical</enum>
     </property>
    </widget>
+   <widget class="QPushButton" name="bt_setting">
+    <property name="geometry">
+     <rect>
+      <x>860</x>
+      <y>420</y>
+      <width>121</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Setting</string>
+    </property>
+   </widget>
    <zorder>graphicsView</zorder>
    <zorder>label</zorder>
    <zorder>line_2</zorder>
@@ -371,6 +389,7 @@ p, li { white-space: pre-wrap; }
    <zorder>bt_add</zorder>
    <zorder>label_5</zorder>
    <zorder>line_3</zorder>
+   <zorder>bt_setting</zorder>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
