--- a/PTI/SPCK/GUI/Setup2.ui
+++ b/PTI/SPCK/GUI/Setup2.ui
@@ -203,6 +203,19 @@
      <string>For what purpose do you use it?</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>370</y>
+      <width>241</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>*You can change it later in Setting (Admin)</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
