--- a/PTI/SPCK/GUI/dangky.ui
+++ b/PTI/SPCK/GUI/dangky.ui
@@ -423,6 +423,381 @@
     </item>
     <item>
      <property name="text">
+      <string>1920</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1921</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1922</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1923</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1924</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1925</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1926</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1927</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1928</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1929</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1930</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1931</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1932</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1933</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1934</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1935</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1936</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1937</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1938</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1939</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1940</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1941</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1942</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1943</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1944</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1945</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1946</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1947</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1948</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1949</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1950</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1951</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1952</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1953</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1954</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1955</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1956</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1957</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1958</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1959</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1960</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1961</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1962</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1963</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1964</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1965</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1966</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1967</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1968</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1969</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1970</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1971</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1972</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1973</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1974</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1975</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1976</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1977</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1978</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1979</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1980</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1981</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1982</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1983</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1984</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1985</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1986</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1987</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1988</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1989</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1990</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1991</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1992</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1993</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>1994</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
       <string>1995</string>
      </property>
     </item>
@@ -519,6 +894,56 @@
     <item>
      <property name="text">
       <string>2014</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2015</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2016</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2017</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2018</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2019</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2020</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2021</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2022</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2023</string>
+     </property>
+    </item>
+    <item>
+     <property name="text">
+      <string>2024</string>
      </property>
     </item>
    </widget>
