--- a/PTI/SPCK/GUI/mainnote.ui
+++ b/PTI/SPCK/GUI/mainnote.ui
@@ -272,7 +272,7 @@ p, li { white-space: pre-wrap; }
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>440</x>
+      <x>430</x>
       <y>80</y>
       <width>131</width>
       <height>21</height>
@@ -284,7 +284,7 @@ p, li { white-space: pre-wrap; }
      </font>
     </property>
     <property name="text">
-     <string>Release Version 1</string>
+     <string>Beta 4 Testing Only!</string>
     </property>
    </widget>
   </widget>
