--- a/PTI/SPCK/GUI/dangky.ui
+++ b/PTI/SPCK/GUI/dangky.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>805</width>
-    <height>553</height>
+    <height>640</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -21,7 +21,7 @@
     <property name="geometry">
      <rect>
       <x>290</x>
-      <y>0</y>
+      <y>10</y>
       <width>281</width>
       <height>121</height>
      </rect>
@@ -42,10 +42,15 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>120</y>
+      <y>160</y>
       <width>161</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 0, 4);</string>
@@ -58,7 +63,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>140</y>
+      <y>180</y>
       <width>401</width>
       <height>31</height>
      </rect>
@@ -74,10 +79,15 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>180</y>
+      <y>220</y>
       <width>71</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 0, 4);</string>
@@ -90,7 +100,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>200</y>
+      <y>240</y>
       <width>401</width>
       <height>31</height>
      </rect>
@@ -109,10 +119,15 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>240</y>
-      <width>131</width>
+      <y>280</y>
+      <width>141</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 0, 4);</string>
@@ -125,7 +140,7 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>260</y>
+      <y>300</y>
       <width>401</width>
       <height>31</height>
      </rect>
@@ -141,10 +156,15 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>300</y>
+      <y>340</y>
       <width>101</width>
       <height>16</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>9</pointsize>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">color: rgb(255, 0, 4);</string>
@@ -156,8 +176,8 @@
    <widget class="QComboBox" name="cb_month">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>340</y>
+      <x>170</x>
+      <y>390</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -234,8 +254,8 @@
    <widget class="QComboBox" name="cb_day">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>340</y>
+      <x>50</x>
+      <y>390</y>
       <width>101</width>
       <height>31</height>
      </rect>
@@ -407,8 +427,8 @@
    <widget class="QComboBox" name="cb_year">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>340</y>
+      <x>310</x>
+      <y>390</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -951,7 +971,7 @@
     <property name="geometry">
      <rect>
       <x>50</x>
-      <y>320</y>
+      <y>360</y>
       <width>121</width>
       <height>16</height>
      </rect>
@@ -964,7 +984,7 @@
     <property name="geometry">
      <rect>
       <x>310</x>
-      <y>400</y>
+      <y>480</y>
       <width>251</width>
       <height>17</height>
      </rect>
@@ -982,7 +1002,7 @@
     <property name="geometry">
      <rect>
       <x>370</x>
-      <y>430</y>
+      <y>510</y>
       <width>91</width>
       <height>31</height>
      </rect>
@@ -1000,14 +1020,14 @@
     <property name="geometry">
      <rect>
       <x>40</x>
-      <y>100</y>
-      <width>271</width>
-      <height>16</height>
+      <y>130</y>
+      <width>361</width>
+      <height>21</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>9</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -1021,7 +1041,7 @@
     <property name="geometry">
      <rect>
       <x>330</x>
-      <y>470</y>
+      <y>550</y>
       <width>171</width>
       <height>41</height>
      </rect>
@@ -1039,9 +1059,9 @@
     <property name="geometry">
      <rect>
       <x>480</x>
-      <y>110</y>
+      <y>130</y>
       <width>20</width>
-      <height>271</height>
+      <height>301</height>
      </rect>
     </property>
     <property name="orientation">
@@ -1059,7 +1079,7 @@
     </property>
     <property name="font">
      <font>
-      <pointsize>10</pointsize>
+      <pointsize>12</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -1073,15 +1093,15 @@ to complete registration!</string>
    <widget class="QRadioButton" name="rb_admin">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>220</y>
+      <x>560</x>
+      <y>260</y>
       <width>151</width>
       <height>17</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>9</pointsize>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="text">
@@ -1091,10 +1111,28 @@ to complete registration!</string>
    <widget class="QRadioButton" name="rb_local">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>260</y>
+      <x>560</x>
+      <y>300</y>
       <width>121</width>
       <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Local Account</string>
+    </property>
+   </widget>
+   <widget class="QCheckBox" name="chb_skip">
+    <property name="geometry">
+     <rect>
+      <x>170</x>
+      <y>360</y>
+      <width>251</width>
+      <height>17</height>
      </rect>
     </property>
     <property name="font">
@@ -1103,7 +1141,7 @@ to complete registration!</string>
      </font>
     </property>
     <property name="text">
-     <string>Local Account</string>
+     <string>Skip choosing your date of birth.</string>
     </property>
    </widget>
   </widget>
